<resources>
    <string name="app_name">Crime Zone</string>
    <string name="button_main">Profile</string>
    <string name="activity2_name">View Profile</string>
    <string name="text_header">Welcome!</string>
    <string name="fname">fname</string>
    <string name="lname">lname</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="need_a_new_account">Need A New Account</string>
    <string name="logout">Logout</string>
    <string name="account_setting">Account Setting</string>
    <string name="all_events">All Events</string>
    <string name="account_settings">Account Settings</string>
    <string name="add_event">Add Event</string>

    <string name="title_activity_maps">Map</string>
</resources>
