<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfile">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="-3dp"
        android:text="@string/text_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#03A9F4"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageDisplay"
        android:layout_marginTop="-3dp"
        android:text="@string/fname"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_fname"
        android:text="@string/lname"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_lname"
        android:text="@string/email"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_email"
        android:text="@string/phone"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@id/text_header"
        android:layout_centerInParent="true"
        android:contentDescription="@string/user_profile_image" />
</RelativeLayout>